api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-api
  namespace: default
  labels:
    app: synergychat-api
spec:
  selector:
    matchLabels:
      app: synergychat-api
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  synergychat-api
      labels:
        app: synergychat-api
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: synergychat-api
        image: docker.io/bootdotdev/synergychat-api:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: cache-volume-1
          mountPath: /cache
        - name: synergychat-api-volume
          mountPath: /persist
      volumes:
      - name: cache-volume-1
        emptyDir: {}
      - name: synergychat-api-volume
        persistentVolumeClaim:
          claimName: synergychat-api-pvc
      restartPolicy: Always
