crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: crawler
  name: synergychat-crawler
  labels:
    app: synergychat-crawler
spec:
  selector:
    matchLabels:
      app: synergychat-crawler
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  synergychat-crawler
      labels:
        app: synergychat-crawler
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: synergychat-crawler-1
        image: docker.io/bootdotdev/synergychat-crawler:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: cache-volume-1
          mountPath: /cache
      - name: synergychat-crawler-2
        image: docker.io/bootdotdev/synergychat-crawler:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: cache-volume-2
          mountPath: /cache
      - name: synergychat-crawler-3
        image: docker.io/bootdotdev/synergychat-crawler:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: cache-volume-3
          mountPath: /cache
      volumes:
      - name: cache-volume-1
        emptyDir: {}
      - name: cache-volume-2
        emptyDir: {}
      - name: cache-volume-3
        emptyDir: {}
      restartPolicy: Always
