web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synergychat-web
  namespace: default
  labels:
    app: synergychat-web
spec:
  selector:
    matchLabels:
      app: synergychat-web
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergychat-web
    spec:
      containers:
      - name: synergychat-web
        image: docker.io/bootdotdev/synergychat-web:latest
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
