api-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: synergychat-api
  type: ClusterIP
  ports:
  - name: api-service
    protocol: TCP
    port: 80
    targetPort: 30080
---
